Material design added

--- a/bun-net/src/app/components/screens/login-screen/login-screen.component.html
+++ b/bun-net/src/app/components/screens/login-screen/login-screen.component.html
@@ -1,3 +1,5 @@
-<p>
-  login-screen works!
-</p>
+<div>
+  <input [(ngModel)]="username" />
+</div>
+
+<button md-button (click)="login()">OK</button>
