--- a/bun-net/src/app/components/screens/login-screen/login-screen.component.html
+++ b/bun-net/src/app/components/screens/login-screen/login-screen.component.html
@@ -1,5 +1,10 @@
 <div>
-  <input [(ngModel)]="username" />
+  <label for="username">Username</label>
+  <input id="username" [(ngModel)]="username" required/>
+</div>
+<div>
+  <label for="password">Password</label>
+  <input id="password" [(ngModel)]="password" required/>
 </div>
 
-<button md-button (click)="login()">OK</button>
+<button md-button (click)="login()">Login</button>
