Details component basic layout

--- a/bun-net/src/app/components/screens/details-screen/details-screen.component.html
+++ b/bun-net/src/app/components/screens/details-screen/details-screen.component.html
@@ -1,3 +1,8 @@
-<p>
-  details-screen works!
-</p>
+<h2>{{party.name}} details!</h2>
+<div><label>id: </label>{{party.id}}</div>
+<div><label>name: </label>{{party.name}}</div>
+<div><label>type: </label>{{party.type}}</div>
+<div><label>phone: </label>{{party.phone}}</div>
+<div><label>email: </label>{{party.email}}</div>
+<div><label>status: </label>{{party.status}}</div>
+
