Part class changed

--- a/bun-net/src/app/components/screens/list-screen/list-screen.component.html
+++ b/bun-net/src/app/components/screens/list-screen/list-screen.component.html
@@ -4,9 +4,9 @@
 
 <ul>
   <li *ngFor="let party of parties">
-    <span>party id: {{party.id}}</span>
-    <span>name: {{party.name}}</span>
-    <span>type: {{party.type}}</span>
+    <span>party id: {{party.partyId}}</span>
+    <span>name: {{party.partyName}}</span>
+    <span>type: {{party.partyType}}</span>
     <span>phone: {{party.phone}}</span>
     <span>email: {{party.email}}</span>
     <span>status: {{party.status}}</span>
