--- a/bun-net/src/app/components/screens/new-screen/new-screen.component.html
+++ b/bun-net/src/app/components/screens/new-screen/new-screen.component.html
@@ -1,3 +1,21 @@
-<p>
-  new-screen works!
-</p>
+<div class="text-center">
+<h3>
+  New item
+</h3>
+<div class="padding-10">
+  <label for="bunname">Bun Name</label>
+</div>
+<div>
+  <input id="bunname" [(ngModel)]="bunname" required/>
+</div>
+
+<div class="padding-10">
+  <label for="buncount">Bun Count</label>
+</div>
+<div>
+<md-slider min="1" max="5" step="0.5" value="1.5"></md-slider>
+</div>
+<div class="padding-10">
+<button md-button (click)="placeOrder()">Place Order</button>
+</div>
+</div>
