--- a/bun-net/src/styles.css
+++ b/bun-net/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/styles/bootstrap/bootstrap.css';
+@import '../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css'
 
 
 /*CUSTOM CSS*/
