--- a/bun-net/src/app/components/screens/new-screen/new-screen.component.html
+++ b/bun-net/src/app/components/screens/new-screen/new-screen.component.html
@@ -13,7 +13,17 @@
   <label for="buncount">Bun Count</label>
 </div>
 <div>
-<md-slider min="1" max="5" step="0.5" value="1.5"></md-slider>
+<md-slider class="bun-slider" [(ngModel)]="buncount"
+        [disabled]=false
+        [invert]=false
+        [max]=10
+        [min]=1
+        [step]=1
+        [thumb-label]=true
+        [tick-interval]=1
+        [value]=1
+        [vertical]=false>
+    </md-slider>
 </div>
 <div class="padding-10">
 <button md-button (click)="placeOrder()">Place Order</button>
