--- a/bun-net/src/styles.css
+++ b/bun-net/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'assets/styles/bootstrap/bootstrap.css';
-@import '../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css'
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 
 /*CUSTOM CSS*/
@@ -23,7 +23,9 @@ body{
 .page-body{
     background-color: #fff;
 }
-
+.bun-slider{
+    width: 350px;
+}
 
 .text-center{
     text-align: center;
