Screen detail component works with service

--- a/bun-net/src/app/components/screens/details-screen/details-screen.component.html
+++ b/bun-net/src/app/components/screens/details-screen/details-screen.component.html
@@ -1,7 +1,6 @@
-<h2>{{party.name}} details!</h2>
-<div><label>id: </label>{{party.id}}</div>
-<div><label>name: </label>{{party.name}}</div>
-<div><label>type: </label>{{party.type}}</div>
+<div><label>id: </label>{{party.partyId}}</div>
+<div><label>name: </label>{{party.partyName}}</div>
+<div><label>type: </label>{{party.partyType}}</div>
 <div><label>phone: </label>{{party.phone}}</div>
 <div><label>email: </label>{{party.email}}</div>
 <div><label>status: </label>{{party.status}}</div>
