--- a/bun-net/src/app/app.component.html
+++ b/bun-net/src/app/app.component.html
@@ -1,6 +1,4 @@
-  <div class="heading">
-  <h1>MENU</h1>
-</div>
-<div class="container text-center page-body">
-<router-outlet></router-outlet>
+<app-top-menu></app-top-menu>
+<div class="container text-center">
+  <router-outlet></router-outlet>
 </div>
